# EpubVoice

./: .dockerignore  .env.example  .gitignore  Dockerfile  LAUNCH_CHECKLIST.md  README.md  SECURITY_PRIVACY_NOTES.md  SETUP_CHECKLIST.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md
epub_chapters/: __init__.py  api.py  editor.py  launch.py  models.py  normalizer.py  parser.py  synth.py
public/: 404.html
scripts/: launch-local.sh
src/: App.test.tsx  App.tsx  styles.css
src/components/: ChapterTimeline.tsx  NotFound.tsx  ParameterPanel.test.tsx  ParameterPanel.tsx  RenderPanel.test.tsx  RenderPanel.tsx
src/lib/: chapterLogic.test.ts  chapterLogic.ts  mockData.ts  parameters.test.ts  parameters.ts  types.ts
tests/: test_api.py  test_e2e.py  test_epub.py  test_epub_parser_robustness.py  test_synth.py
